fixed text alignment on user profile

--- a/bruinmatch-frontend/src/Rec.css
+++ b/bruinmatch-frontend/src/Rec.css
@@ -84,7 +84,7 @@
 
 .save1 {
   margin-left: 130px;
-  margin-top: 75px;
+  margin-top: 100px;
   border: 3px solid #2774ae;
   border-radius: 40px;
   background-color: #c1e4ff;
